# runpod-alerts-tg-bot

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  simulate.py
.cursor/plans/: run-0058ed7d.plan.md
data/: state.json
src/runpod_alerts_tg_bot/: __init__.py  alerts_service.py  config.py  logging_setup.py  runpod_client.py  telegram_bot.py
